Fix fork model route and regen sdk
