# services/models/spec/v1/openapi.json
@@ -500,6 +500,75 @@
         }
       }
     },
+    "/models-api/models/fork/{author}/{name}": {
+      "post": {
+        "tags": [
+          "Models"
+        ],
+        "description": "Fork model metadata from a platform",
+        "operationId": "fork_model",
+        "parameters": [
+          {
+            "name": "author",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Forked model",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForkModelResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BadRequestResponse"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotFoundResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ServerErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/models-api/models/search": {
       "post": {
         "tags": [
@@ -1348,40 +1417,6 @@
   },
   "components": {
     "schemas": {
-      "Accelerator": {
-        "type": "object",
-        "required": [
-          "accelerator_type",
-          "system_requirements"
-        ],
-        "properties": {
-          "accelerator_type": {
-            "type": "string"
-          },
-          "cores": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
-          },
-          "memory_gb": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
-          },
-          "system_requirements": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/SystemRequirement"
-            },
-            "description": "Firmware and software"
-          }
-        },
-        "additionalProperties": false
-      },
       "Artifact": {
         "type": "object",
         "required": [
@@ -1662,107 +1697,11 @@
           "name"
         ],
         "properties": {
-          "annotations": {},
-          "bias_evaluation_score": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
-          },
           "description": {
             "type": [
               "string",
               "null"
             ]
-          },
-          "edge_optimized": {
-            "type": [
-              "boolean",
-              "null"
-            ]
-          },
-          "finetuning_datasets": {
-            "type": [
-              "array",
-              "null"
-            ],
-            "items": {
-              "type": "string"
-            }
-          },
-          "image": {
-            "type": [
-              "string",
-              "null"
-            ]
-          },
-          "inference_distributed": {
-            "type": [
-              "boolean",
-              "null"
-            ]
-          },
-          "inference_hardware": {
-            "oneOf": [
-              {
-                "type": "null"
-              },
-              {
-                "$ref": "#/components/schemas/HardwareRequirements"
-              }
-            ]
-          },
-          "inference_max_compute_utilization_percentage": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
-          },
-          "inference_max_energy_consumption_watts": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
-          },
-          "inference_max_latency_ms": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32",
-            "description": "Inference performance fields"
-          },
-          "inference_max_memory_usage_mb": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
-          },
-          "inference_min_throughput": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
-          },
-          "inference_precision": {
-            "type": [
-              "string",
-              "null"
-            ]
-          },
-          "inference_software_dependencies": {
-            "type": [
-              "array",
-              "null"
-            ],
-            "items": {
-              "type": "string"
-            }
           },
           "libraries": {
             "type": [
@@ -1779,66 +1718,14 @@
               "null"
             ]
           },
-          "model_inputs": {
-            "type": [
-              "array",
-              "null"
-            ],
-            "items": {
-              "$ref": "#/components/schemas/ModelIO"
-            }
-          },
-          "model_outputs": {
-            "type": [
-              "array",
-              "null"
-            ],
-            "items": {
-              "$ref": "#/components/schemas/ModelIO"
-            }
-          },
           "model_type": {
             "type": [
               "string",
               "null"
             ]
           },
-          "multi_modal": {
-            "type": [
-              "boolean",
-              "null"
-            ],
-            "description": "Architecture fields"
-          },
           "name": {
             "type": "string"
-          },
-          "pretrained": {
-            "type": [
-              "boolean",
-              "null"
-            ]
-          },
-          "pretraining_datasets": {
-            "type": [
-              "array",
-              "null"
-            ],
-            "items": {
-              "type": "string"
-            }
-          },
-          "pruned": {
-            "type": [
-              "boolean",
-              "null"
-            ]
-          },
-          "quantization_aware": {
-            "type": [
-              "boolean",
-              "null"
-            ]
           },
           "regulatory": {
             "type": [
@@ -1847,20 +1734,7 @@
             ],
             "items": {
               "type": "string"
-            },
-            "description": "Regulatory and Compliance Fields\nA vector or strings that represent regulatory standards. Ex HIPPA"
-          },
-          "slimmed": {
-            "type": [
-              "boolean",
-              "null"
-            ]
-          },
-          "supports_quantization": {
-            "type": [
-              "boolean",
-              "null"
-            ]
+            }
           },
           "tags": {
             "type": [
@@ -1869,8 +1743,7 @@
             ],
             "items": {
               "type": "string"
-            },
-            "description": "Arbitrary labels"
+            }
           },
           "task_types": {
             "type": [
@@ -1879,46 +1752,7 @@
             ],
             "items": {
               "$ref": "#/components/schemas/Task"
-            },
-            "description": "Inference Fields"
-          },
-          "training_distributed": {
-            "type": [
-              "boolean",
-              "null"
-            ]
-          },
-          "training_hardware": {
-            "oneOf": [
-              {
-                "type": "null"
-              },
-              {
-                "$ref": "#/components/schemas/HardwareRequirements"
-              }
-            ]
-          },
-          "training_max_energy_consumption_watts": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32",
-            "description": "Training performance fields"
-          },
-          "training_precision": {
-            "type": [
-              "string",
-              "null"
-            ]
-          },
-          "training_time": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int64",
-            "description": "Training-related Fields"
+            }
           }
         },
         "additionalProperties": false
@@ -2293,51 +2127,6 @@
           }
         }
       },
-      "HardwareRequirements": {
-        "type": "object",
-        "properties": {
-          "accelerators": {
-            "type": [
-              "array",
-              "null"
-            ],
-            "items": {
-              "$ref": "#/components/schemas/Accelerator"
-            }
-          },
-          "architectures": {
-            "type": [
-              "array",
-              "null"
-            ],
-            "items": {
-              "type": "string"
-            }
-          },
-          "cpus": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
-          },
-          "disk_gb": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
-          },
-          "memory_gb": {
-            "type": [
-              "integer",
-              "null"
-            ],
-            "format": "int32"
-          }
-        },
-        "additionalProperties": false
-      },
       "IngestArtifactRequest": {
         "type": "object",
         "required": [
@@ -2686,28 +2475,6 @@
           }
         }
       },
-      "ModelIO": {
-        "type": "object",
-        "properties": {
-          "data_type": {
-            "type": [
-              "string",
-              "null"
-            ]
-          },
-          "shape": {
-            "type": [
-              "array",
-              "null"
-            ],
-            "items": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        },
-        "additionalProperties": false
-      },
       "ModelMetadata": {
         "type": "object",
         "required": [
@@ -2931,22 +2698,6 @@
             "type": "string"
           }
         }
-      },
-      "SystemRequirement": {
-        "type": "object",
-        "required": [
-          "name",
-          "version"
-        ],
-        "properties": {
-          "name": {
-            "type": "string"
-          },
-          "version": {
-            "type": "string"
-          }
-        },
-        "additionalProperties": false
       },
       "Task": {
         "type": "string",
